--- a/config/config.yaml
+++ b/config/config.yaml
@@ -62,6 +62,10 @@ weight:
 
 # name 可以定义任意名称，只具有显示作用，即使项目运行了几天后，忽然改掉 name 也不会影响代码的正常运行
 platforms:
+  - id: "linux.do"
+    name: "https://linux.do/论坛"
+  - id: "github"
+    name: "GitHub热搜"    
   - id: "toutiao"
     name: "今日头条"
   - id: "baidu"
